external-crates/move/crates/move-compiler/tests/move_check/parser/unmatched_restricted_identifier_no_text.snap
error[E01012]: invalid identifier escape
  ┌─ tests/move_check/parser/unmatched_restricted_identifier_no_text.move:4:9
  │
4 │     fun `
  │         ^ Missing closing backtick (`) for restricted identifier escaping

